# BinanceLocalServer

./: .gitignore  123  33  Cargo.toml  analyze_db.py  config.toml  data_flow.md  debug.bat  launch_hidden.bat  start.bat  start_powershell.bat  temp  test_server.py  test_tv_proxy.py  tradingview_data_server.js  tradingview品种
src/: api_client.rs  binance_proxy.rs  cache_manager.rs  config.rs  db_manager.rs  error.rs  main.rs  models.rs  tradingview_proxy.rs  transformer.rs  utils.rs  web_server.rs
