# cargo.toml
#版本号不要随便改，因为每一个都是我手动查询过，是最新版本
[package]
name = "BinanceLocalServer"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web 框架与服务 ---
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2" # tower::Layer 和 tower::Service trait
futures = "0.3.31" # 用于自定义中间件中的 BoxFuture

# --- 日志 ---
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# --- 序列化 / 反序列化 ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- 异步 HTTP 客户端 ---
reqwest = { version = "0.12.24", features = ["json"] }



# --- 错误处理与工具库 ---
thiserror = "2.0.17"
chrono = "0.4.42"
once_cell = "1.21.3"